# tui_chat_app_server

./: .env  .gitignore  Cargo.nix  Cargo.toml  README.md  Rocket.toml  chat.db  flake.nix  run.sh
migrations/: 001_create_users_table.sql
migrations/migrations/: 001_create_users_table.sql  002_create_files_table.sql
src/: auth.rs  chat.rs  data_access.rs  db.rs  files.rs  main.rs  models.rs  redis_pubsub.rs  user.rs  utils.rs  ws.rs
src/commands/: admin.rs  user.rs
src/data_service/: add.rs  change.rs  exists.rs  get.rs  mod.rs  remove.rs
