[package]
name = "tui_chat_server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "uuid"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
redis = { version = "0.24.0", features = ["tokio-comp"] }
jsonwebtoken = "9.3.1"
dotenv = "0.15.0"
async-trait = "0.1.88"
chrono = "0.4.41"
tokio-tungstenite = "0.27.0"
tungstenite = "0.27.0"
futures-util = {version = "0.3.31", features = ["async-await"]}
argon2 = "0.5.3"
rand = "0.8.5"
mime_guess = "2.0.4"
base64 = "0.21.0"
mime = "0.3.17"
tokio-util = { version = "0.7.11", features = ["io"] }
bytes = "1.6.0"
rocket-multipart = "0.2.1"
mime_multipart = "0.6.1"
hyper = "1.6.0"
http = "1.3.1"
content_disposition = "0.4.0"
log = "0.4.17"
env_logger = "0.10.0"
